unpackaged/main/default/objects/Contact/fields/Active__c.field-meta.xml
<CustomField>
    <fullName>Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>Indicates status of BD's relationship with Contact</description>
    <inlineHelpText>Indicates status of Black Diamond's relationship with Contact</inlineHelpText>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>