unpackaged/main/default/objects/Contact/fields/Address_line_2__c.field-meta.xml
<CustomField>
    <fullName>Address_line_2__c</fullName>
    <label>Address line 2</label>
    <type>TextArea</type>
</CustomField>