unpackaged/main/default/objects/Contact/fields/Affiliation__c.field-meta.xml
<CustomField>
    <fullName>Affiliation__c</fullName>
    <inlineHelpText>“Affiliation” should reflect the company in which the contact works for, or is associated with.</inlineHelpText>
    <label>Affiliation</label>
    <length>255</length>
    <type>Text</type>
</CustomField>