unpackaged/main/default/objects/Contact/fields/Brand_Name__c.field-meta.xml
<CustomField>
    <fullName>Brand_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Brand Name</label>
    <referenceTo>Brand__c</referenceTo>
    <relationshipLabel>Contacts</relationshipLabel>
    <relationshipName>Contacts</relationshipName>
    <type>Lookup</type>
</CustomField>