unpackaged/main/default/objects/Contact/fields/Contact_Hierarchy__c.field-meta.xml
<CustomField>
    <fullName>Contact_Hierarchy__c</fullName>
    <description>The Contact Hierarchy indicates how important the contact is to Black DIamond (on a scale from 1 to 3, 1 being very important and 3 being not important)</description>
    <label>Contact Hierarchy</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>