unpackaged/main/default/objects/Contact/fields/Contact_Phone__c.field-meta.xml
<CustomField>
    <fullName>Contact_Phone__c</fullName>
    <description>Auto-filled by process from Primary # picklist</description>
    <inlineHelpText>Auto-filled by process from selection in Primary #</inlineHelpText>
    <label>Primary Phone</label>
    <type>Phone</type>
</CustomField>