unpackaged/main/default/objects/Contact/fields/Exclude_From_Marketing__c.field-meta.xml
<CustomField>
    <fullName>Exclude_From_Marketing__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Exclude From Marketing</label>
    <type>Checkbox</type>
</CustomField>