unpackaged/main/default/objects/Contact/fields/Legacy_id__c.field-meta.xml
<CustomField>
    <fullName>Legacy_id__c</fullName>
    <label>Legacy_id</label>
    <length>50</length>
    <type>Text</type>
</CustomField>