unpackaged/main/default/objects/Contact/fields/Mailing_City__c.field-meta.xml
<CustomField>
    <fullName>Mailing_City__c</fullName>
    <label>OLD - Mailing City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>