unpackaged/main/default/objects/Contact/fields/Mailing_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Postal_Code__c</fullName>
    <label>OLD - Mailing Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>