unpackaged/main/default/objects/Contact/fields/Mailing_Street__c.field-meta.xml
<CustomField>
    <fullName>Mailing_Street__c</fullName>
    <label>OLD - Mailing Street</label>
    <type>TextArea</type>
</CustomField>