unpackaged/main/default/objects/Contact/fields/Mass_Email__c.field-meta.xml
<CustomField>
    <fullName>Mass_Email__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Mass Email</label>
    <type>Checkbox</type>
</CustomField>