unpackaged/main/default/objects/Contact/fields/No_Longer_w_Account__c.field-meta.xml
<CustomField>
    <fullName>No_Longer_w_Account__c</fullName>
    <defaultValue>false</defaultValue>
    <label>No Longer w/ Account</label>
    <type>Checkbox</type>
</CustomField>