unpackaged/main/default/objects/Contact/fields/NS_Contact_ID_Secondary__c.field-meta.xml
<CustomField>
    <fullName>NS_Contact_ID_Secondary__c</fullName>
    <label>NS Contact ID Secondary</label>
    <length>255</length>
    <type>Text</type>
</CustomField>