unpackaged/main/default/objects/Contact/fields/NS_Contact_Last_Sync_Date__c.field-meta.xml
<CustomField>
    <fullName>NS_Contact_Last_Sync_Date__c</fullName>
    <label>NS Contact Last Sync Date</label>
    <type>DateTime</type>
</CustomField>