unpackaged/main/default/objects/Contact/fields/Original_Lead_Source_Detail__c.field-meta.xml
<CustomField>
    <fullName>Original_Lead_Source_Detail__c</fullName>
    <description>Mapped from Lead Source Detail during Lead conversion.</description>
    <inlineHelpText>Details about the origin of this contact record.</inlineHelpText>
    <label>Lead Source Detail</label>
    <length>100</length>
    <type>Text</type>
</CustomField>