unpackaged/main/default/objects/Contact/fields/Other_City__c.field-meta.xml
<CustomField>
    <fullName>Other_City__c</fullName>
    <label>OLD - Other City</label>
    <length>40</length>
    <type>Text</type>
</CustomField>