unpackaged/main/default/objects/Contact/fields/Other_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Other_Postal_Code__c</fullName>
    <label>OLD - Other Postal/Zip Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>