unpackaged/main/default/objects/Contact/fields/Other_Street__c.field-meta.xml
<CustomField>
    <fullName>Other_Street__c</fullName>
    <label>OLD - Other Street</label>
    <type>TextArea</type>
</CustomField>