unpackaged/main/default/objects/Contact/fields/Outreach_Current_Sequence_Task_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Current_Sequence_Task_Due_Date__c</fullName>
    <label>Current Sequence Task Due Date</label>
    <type>DateTime</type>
</CustomField>