unpackaged/main/default/objects/Contact/fields/Outreach_Date_Added_to_Sequence__c.field-meta.xml
<CustomField>
    <fullName>Outreach_Date_Added_to_Sequence__c</fullName>
    <inlineHelpText>Date field that is updated automatically when Contact are added to a new sequence</inlineHelpText>
    <label>Date Added to Sequence</label>
    <type>Date</type>
</CustomField>