unpackaged/main/default/objects/Contact/fields/Primary_Number__c.field-meta.xml
<CustomField>
    <fullName>Primary_Number__c</fullName>
    <description>Indicates which phone # is preferred.</description>
    <inlineHelpText>Indicates which phone # this Contact prefers.</inlineHelpText>
    <label>Primary #</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Mobile</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
            <value>
                <fullName>Account</fullName>
                <default>true</default>
                <label>Account</label>
            </value>
            <value>
                <fullName>Fax</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>