unpackaged/main/default/objects/Contact/fields/Professional_Designations__c.field-meta.xml
<CustomField>
    <fullName>Professional_Designations__c</fullName>
    <label>Professional Designations</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>