unpackaged/main/default/objects/Contact/fields/Reason__c.field-meta.xml
<CustomField>
    <fullName>Reason__c</fullName>
    <description>Reason if a contact is no longer with the account.</description>
    <label>Reason</label>
    <length>255</length>
    <type>Text</type>
</CustomField>