unpackaged/main/default/objects/Contact/fields/Record_Summary__c.field-meta.xml
<CustomField>
    <fullName>Record_Summary__c</fullName>
    <description>This is used for search layout and providing more details to identify duplicate Contacts.</description>
    <formula>RecordType.Name + ' (' + Account.Name + ' - ' +  Owner.FirstName + ' ' + Owner.LastName + ')'</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Record Summary</label>
    <type>Text</type>
</CustomField>