unpackaged/main/default/objects/Contact/fields/Vanguard_ID__c.field-meta.xml
<CustomField>
    <fullName>Vanguard_ID__c</fullName>
    <externalId>true</externalId>
    <label>Vanguard ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>