unpackaged/main/default/objects/Contact/fields/Website_Source_Contact__c.field-meta.xml
<CustomField>
    <fullName>Website_Source_Contact__c</fullName>
    <description>Used to map which website a contact is sourced from</description>
    <inlineHelpText>Website that was used by customer</inlineHelpText>
    <label>Website Source - C</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Website_Source</valueSetName>
    </valueSet>
</CustomField>