unpackaged/main/default/objects/Contact/recordTypes/BD_Contact.recordType-meta.xml
<RecordType>
    <fullName>BD_Contact</fullName>
    <active>true</active>
    <label>BD Contact</label>
</RecordType>