unpackaged/main/default/objects/Contact/recordTypes/Vanguard.recordType-meta.xml
<RecordType>
    <fullName>Vanguard</fullName>
    <active>true</active>
    <label>Vanguard</label>
</RecordType>