unpackaged/main/default/objects/Contact/validationRules/Lead_Source_Details_required.validationRule-meta.xml
<ValidationRule>
    <fullName>Lead_Source_Details_required</fullName>
    <active>true</active>
    <description>Used to manage values in the Lead/Account source picklist</description>
    <errorConditionFormula>AND(
RecordType.Name &lt;&gt; "Vanguard",
ISPICKVAL( LeadSource, "Other"),
Original_Lead_Source_Detail__c = ""
)</errorConditionFormula>
    <errorDisplayField>Original_Lead_Source_Detail__c</errorDisplayField>
    <errorMessage>Describe "Other" Lead Source.</errorMessage>
</ValidationRule>