unpackaged/main/default/objects/Contact/validationRules/Need_Phone_or_Email.validationRule-meta.xml
<ValidationRule>
    <fullName>Need_Phone_or_Email</fullName>
    <active>true</active>
    <description>Used to enforce data rule that either Phone or Email is required</description>
    <errorConditionFormula>AND(
 RecordType.Name &lt;&gt; "Vanguard",
 ISBLANK(Email),
 ISBLANK(Phone),
 ISBLANK(MobilePhone),
 ISBLANK(OtherPhone),
 ISBLANK(Fax)
)</errorConditionFormula>
    <errorMessage>Enter an email or a phone #. If entering phone #(s), select Primary #.</errorMessage>
</ValidationRule>